kuberenetes-manifests/apibuilder-dev-663b0a7f7d96bd47cf95633d-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apibuilder-dev-663b0a7f7d96bd47cf95633d
  namespace: dev
spec:
  gateways:
  - apiwiz-system/apiwiz-gateway
  hosts:
  - builder-test.ICIC.com
  http:
  - headers:
      request:
        add:
          x-tenant: acme-team-gcp-stage-1715145343351--ApiBuilder
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: apibuilder-agent
        port:
          number: 8000
